--- a/app/views/layouts/knb_auction/application.html.haml
+++ b/app/views/layouts/knb_auction/application.html.haml
@@ -4,6 +4,7 @@
   %head
     %title KnbAuction
     = stylesheet_link_tag    "knb-auction/application", :media => "all"
+    = stylesheet_link_tag    "http://www.kidsnbids.com/assets/application-399e8f78fb6dab2455da48144469d261.css"
     = javascript_include_tag "knb-auction/application"
     = csrf_meta_tags
   %body
