--- a/app/views/layouts/knb_auction/application.html.haml
+++ b/app/views/layouts/knb_auction/application.html.haml
@@ -11,7 +11,7 @@
   %body
     .container
       %header
-        %figure= link_to image_tag('logo.png', width: '267', height: '200', alt: 'Kids N Bids', title: 'Home'), main_app.root_url
+        %figure= link_to image_tag('http://www.kidsnbids.com/assets/logo-98d83606d2744ce639802125fe311e8a.png', width: '267', height: '200', alt: 'Kids N Bids', title: 'Home'), main_app.root_path
         -# .navWrap
         -#   .nav
         -#     = render_navigation(:level => 1)
