--- a/app/views/knb_auction/auctions/_form.html.haml
+++ b/app/views/knb_auction/auctions/_form.html.haml
@@ -5,6 +5,18 @@
       %ul
         - @auction.errors.full_messages.each do |msg|
           %li= msg
-
+          
+  .start-at
+    = f.label :start_at
+    = f.date_select :start_at
+  -# .duration
+  -#   = f.label :duration
+  -#   = f.text_field :duration
+  .product
+    = f.label :product
+    =collection_select(:auction, :product_id, @product_dropdown, :id, :name, {include_blank: false})
+  .start-price
+    = f.label :start_price
+    = f.text_field :start_price
   .actions
     = f.submit 'Save'
