--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -2,19 +2,25 @@
 
 %table
   %tr
-    %th
-    %th
+    %th Product
+    %th Start Date
+    %th Start Time
+    %th End Date
+    %th End Time
     %th
     %th
     %th
 
   - @auctions.each do |auction|
     %tr
-      %td= start_at_local_time( auction )
-      %td= start_at_local_time( auction )
+      %td= auction.product_name
+      %td= start_at_local_time( auction ).to_date
+      %td= start_at_local_time( auction ).strftime("%I:%M %p %Z")
+      %td= end_at_local_time( auction ).to_date
+      %td= end_at_local_time( auction ).strftime("%I:%M %p %Z")
       %td= link_to 'Show', auction
       %td= link_to 'Edit', edit_auction_path(auction)
-      %td= link_to 'Destroy', auction, method: :delete, data: { confirm: 'Are you sure?' }
+      %td= button_to "Delete", auction, :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
 
 %br
 
