--- a/app/views/knb_auction/bids/_form.html.haml
+++ b/app/views/knb_auction/bids/_form.html.haml
@@ -13,8 +13,8 @@
     = f.label :bid_at
     = f.datetime_select :bid_at
   .field
-    = f.label :amount
-    = f.text_field :amount
+    = f.label :goodles
+    = f.text_field :goodles
   .field
     = f.label :auction_id
     = f.number_field :auction_id
