--- a/app/views/knb_auction/bids/show.html.haml
+++ b/app/views/knb_auction/bids/show.html.haml
@@ -7,8 +7,8 @@
   %b Bid at:
   = @bid.bid_at
 %p
-  %b Amount:
-  = @bid.amount
+  %b Goodles:
+  = @bid.goodles
 %p
   %b Auction:
   = @bid.auction_id
