--- a/app/views/knb_auction/bids/index.html.haml
+++ b/app/views/knb_auction/bids/index.html.haml
@@ -4,21 +4,19 @@
   %tr
     %th Owner
     %th Bid at
-    %th Amount
-    %th Auction
+    %th Goodles
     %th
     %th
     %th
 
   - @bids.each do |bid|
     %tr
-      %td= bid.owner_id
-      %td= bid.bid_at
-      %td= bid.amount
-      %td= bid.auction_id
+      %td= bid.owner_name
+      %td= bid.bid_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")
+      %td= bid.goodles
       %td= link_to 'Show', bid
       %td= link_to 'Edit', edit_bid_path(bid)
-      %td= link_to 'Destroy', bid, method: :delete, data: { confirm: 'Are you sure?' }
+      %td= button_to "Delete", bid, :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
 
 %br
 
