--- a/app/views/knb_auction/bids/show.html.haml
+++ b/app/views/knb_auction/bids/show.html.haml
@@ -1,18 +1,18 @@
-%p#notice= notice
-
+%p
+  %b Auction:
+  = @bid.auction.product_name
 %p
   %b Owner:
-  = @bid.owner_id
-%p
-  %b Bid at:
-  = @bid.bid_at
+  = @bid.owner_name
 %p
   %b Goodles:
   = @bid.goodles
 %p
-  %b Auction:
-  = @bid.auction_id
+  %b Bid at:
+  = @bid.bid_at
 
-= link_to 'Edit', edit_bid_path(@bid)
+
+
+= link_to 'Edit', edit_auction_bid_path(@auction, @bid)
 \|
-= link_to 'Back', bids_path
+= link_to 'Back to Auction', @auction
