--- a/app/views/knb_auction/auctions/show.html.haml
+++ b/app/views/knb_auction/auctions/show.html.haml
@@ -1,5 +1,5 @@
 %h1 Auction Details
-%h2.product=@auction.product_name
+%h2.product= link_to @auction.product_name, @auction.product
 .auction_status=@auction.status
 .start_at="Start at: #{@auction.start_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")}"
 .end_at="End at: #{@auction.end_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")}"
