--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -7,17 +7,21 @@
     %th Start Time
     %th End Date
     %th End Time
+    %th High Bidder
+    %th High Bid
     %th
     %th
     %th
 
   - @auctions.each do |auction|
     %tr
-      %td= auction.product_name
+      %td= link_to auction.product_name, auction.product
       %td= start_at_local_time( auction ).to_date
       %td= start_at_local_time( auction ).strftime("%I:%M %p %Z")
       %td= end_at_local_time( auction ).to_date
       %td= end_at_local_time( auction ).strftime("%I:%M %p %Z")
+      %td= auction.high_bid.owner_name
+      %td= auction.high_bid.goodles
       %td= link_to 'Show', auction
       %td= link_to 'Edit', edit_auction_path(auction)
       %td= button_to "Delete", auction, :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
