--- a/app/views/knb_auction/auctions/show.html.haml
+++ b/app/views/knb_auction/auctions/show.html.haml
@@ -9,7 +9,9 @@
 =render :partial => "bid"
 
 %br
+%br
+%br
 
-= link_to 'Edit', edit_auction_path(@auction)
+= link_to 'Edit this Auction', edit_auction_path(@auction)
 \|
-= link_to 'Back', auctions_path
+= link_to 'Auctions List', auctions_path
