--- a/app/views/knb_auction/auctions/_bid.haml
+++ b/app/views/knb_auction/auctions/_bid.haml
@@ -1,23 +1,22 @@
-#bids
-  %h1 Bids
+%h1 Bids
 
-  %table
-    %tr
-      %th Owner
-      %th Bid at
-      %th Goodles
-      %th
-      %th
-      %th
+%table
+  %tr
+    %th Owner
+    %th Bid at
+    %th Goodles
+    %th
+    %th
+    %th
 
-    - @bids.each do |bid|
-      .bid
-        %tr
-          %td= link_to bid.owner_name, main_app.users_path(bid.owner)
-          %td= bid.bid_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")
-          %td= bid.goodles
-          %td= link_to 'Show', auction_bid_path(@auction, bid)
-          %td= link_to 'Edit', edit_auction_bid_path(@auction, bid)
-          %td= button_to "Delete", auction_bid_path(@auction, bid), :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
+  - @bids.each do |bid|
+    .bid
+      %tr
+        %td= link_to bid.owner_name, main_app.user_path(bid.owner)
+        %td= bid.bid_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")
+        %td= bid.goodles
+        %td= link_to 'Show', auction_bid_path(@auction, bid)
+        %td= link_to 'Edit', edit_auction_bid_path(@auction, bid)
+        %td= button_to "Delete", auction_bid_path(@auction, bid), :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
 
-  = link_to 'New Bid', new_auction_bid_path(@auction)
+= link_to 'New Bid', new_auction_bid_path(@auction)
