--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -15,17 +15,17 @@
 
   - @auctions.each do |auction|
     %tr
-      %td= link_to auction.product_name, auction.product
+      %td= link_to auction.product_name, auction
       %td= start_at_local_time( auction ).to_date
       %td= start_at_local_time( auction ).strftime("%I:%M %p %Z")
       %td= end_at_local_time( auction ).to_date
       %td= end_at_local_time( auction ).strftime("%I:%M %p %Z")
       %td= auction.high_bid.owner_name
       %td= auction.high_bid.goodles
-      %td= link_to 'Show', auction
+      %td= link_to 'Details', auction
       %td= link_to 'Edit', edit_auction_path(auction)
       %td= button_to "Delete", auction, :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
 
 %br
 
-= link_to 'New Auction', new_auction_path
+= link_to 'Create a new Auction', new_auction_path
