--- a/app/views/knb_auction/bids/index.html.haml
+++ b/app/views/knb_auction/bids/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Listing bids
+%h1 Bids
 
 %table
   %tr
@@ -10,14 +10,13 @@
     %th
 
   - @bids.each do |bid|
-    %tr
-      %td= link_to bid.owner_name, main_app.users_path(bid.owner)
-      %td= bid.bid_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")
-      %td= bid.goodles
-      %td= link_to 'Show', bid
-      %td= link_to 'Edit', edit_auction_bid_path(@auction, bid)
-      %td= button_to "Delete", auction_bid(bid), :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
-
-%br
+    .bid
+      %tr
+        %td= link_to bid.owner_name, main_app.users_path(bid.owner)
+        %td= bid.bid_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")
+        %td= bid.goodles
+        %td= link_to 'Show', auction_bid_path(@auction, bid)
+        %td= link_to 'Edit', edit_auction_bid_path(@auction, bid)
+        %td= button_to "Delete", auction_bid_path(@auction, bid), :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
 
 = link_to 'New Bid', new_auction_bid_path(@auction)
