--- a/spec/dummy/app/views/layouts/application.html.haml
+++ b/spec/dummy/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
   %head
     %title Kids-N-Bids -- Want some Goodles?
     = stylesheet_link_tag    "application", :media => "all"
-    = stylesheet_link_tag    "http://www.kidsnbids.com/assets/application-399e8f78fb6dab2455da48144469d261.css"
+    = stylesheet_link_tag    "http://www.kidsnbids.com/assets/application.css"
     = javascript_include_tag "application"
     = csrf_meta_tags
     = yield(:head)
