Devise for dummy app

--- a/spec/dummy/app/views/layouts/application.html.haml
+++ b/spec/dummy/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
       &bull;
       =link_to "Contact Us", "/contact"
       &bull;
-      == link_to "Support", "/faq"
+      = link_to "Support", "/faq"
       &bull;
       = link_to "lPrivacy &amp; Terms", "/terms"
       </p>
