--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -2,7 +2,7 @@
 
 %table
   %tr
-    %th Product
+    %th Item up for Auction
     %th
     %th Start Date
     %th Start Time
@@ -23,13 +23,12 @@
       %td= start_at_local_time( auction ).strftime("%I:%M %p %Z")
       %td= end_at_local_time( auction ).to_date
       %td= end_at_local_time( auction ).strftime("%I:%M %p %Z")
-      %td= auction.high_bid.owner_name
+      %td= bid_owner_name( auction )
       %td= auction.high_bid.goodles
       - if current_user.admin?
         %td= link_to 'Details', auction
         %td= link_to 'Edit', edit_auction_path(auction)
         %td= button_to "Delete", auction, :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
-
-%br
 - if current_user.admin?
+  %br
   = link_to 'Create a new Auction', new_auction_path
