--- a/app/assets/stylesheets/knb_auction/application.css
+++ b/app/assets/stylesheets/knb_auction/application.css
@@ -7,9 +7,13 @@
  *
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
- * Some thing new here
  *
  *
  *= require_self
  *= require_tree .
  */
+
+.title {
+  font-size:2em;
+  text-align:center;
+}
