--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -1,34 +1,31 @@
-%h1 Auctions
+= render :partial => "knb_auction/application/auction_engine"
 
-%table
-  %tr
-    %th Item up for Auction
-    %th
-    %th Start Date
-    %th Start Time
-    %th End Date
-    %th End Time
-    %th High Bidder
-    %th High Bid
-    %th
-    %th
-    %th
+%h1.title Auctions
 
-  - @auctions.each do |auction|
-    %tr
-      %td= link_to auction.product_name, auction
-      %td
+- @auctions.each do |auction|
+  %ol.auction-list
+    %li.auction
+      .status-label
         - status_label(auction.status) {auction.status.to_s.upcase}
-      %td= start_at_local_time( auction ).to_date
-      %td= start_at_local_time( auction ).strftime("%I:%M %p %Z")
-      %td= end_at_local_time( auction ).to_date
-      %td= end_at_local_time( auction ).strftime("%I:%M %p %Z")
-      %td= bid_owner_name( auction )
-      %td= auction.high_bid.goodles
       - if current_user.admin?
-        %td= link_to 'Details', auction
-        %td= link_to 'Edit', edit_auction_path(auction)
-        %td= button_to "Delete", auction, :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
+        %table.admin-menu
+          %tr
+            %td= link_to 'Details', auction
+            %td= link_to 'Edit', edit_auction_path(auction)
+            %td= button_to "Delete", auction, :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
+      %table.auction-item
+        %tr
+          %td.product-image
+          %td.product-name= link_to auction.product_name, auction
+          %td.time-left
+            = auction_time_left( auction )
+            .time-left-label="left to bid"
+          %td
+            .high-bid= "#{auction.high_bid.goodles}G"
+            .high-bidder= bid_owner_name( auction )
+          %td.bid-button= link_to 'Bid', new_auction_bid_path(auction)
+
+
 - if current_user.admin?
   %br
   = link_to 'Create a new Auction', new_auction_path
