--- a/app/views/knb_auction/auctions/_bid.haml
+++ b/app/views/knb_auction/auctions/_bid.haml
@@ -1,24 +1,23 @@
-%h1 Bids
-
-%table
-  %tr
-    %th
-    %th Bid at
-    %th Goodles
-    %th
-    %th
-    %th
-
-  - @bids.each do |bid|
-    .bid
-      %tr
-        %td= bid_owner_name( @auction )
-        %td= bid.bid_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")
-        %td= bid.goodles
-        - if current_user.admin?
-          %td= link_to 'Show', auction_bid_path(@auction, bid)
-          %td= link_to 'Edit', edit_auction_bid_path(@auction, bid)
-          %td= button_to "Delete", auction_bid_path(@auction, bid), :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
+-if @bids.count > 0
+  %h1.title Bids
+  %table.bid-table
+    %tr
+      %th Bidder
+      %th Bid at
+      %th Goodles
+      %th
+      %th
+      %th
+      - @bids.each do |bid|
+        .bid-item
+          %tr
+            %td= link_to bid_owner_name( @auction ), main_app.user_path(@auction.high_bidder)
+            %td= bid.bid_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")
+            %td= bid.goodles
+            - if current_user.admin?
+              %td= link_to 'Show', auction_bid_path(@auction, bid)
+              %td= link_to 'Edit', edit_auction_bid_path(@auction, bid)
+              %td= button_to "Delete", auction_bid_path(@auction, bid), :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
 
 -if @auction.active?
-  = link_to 'New Bid', new_auction_bid_path(@auction)
+  .bid-button= link_to 'New Bid', new_auction_bid_path(@auction)
