--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -15,17 +15,20 @@
             %td= button_to "Delete", auction, :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
       %table.auction-item
         %tr
-          %td.product-image
+          %td.product-image{style: "width: 60px; height:60px;"}
           %td.product-name= link_to auction.product_name, auction
-          %td.time-left
-            = auction_time_left( auction )
-            .time-left-label="left to bid"
+          -if auction.active?
+            %td.time-left
+              = auction_time_left( auction )
+              .time-left-label="left to bid"
           %td
-            .high-bid= "#{auction.high_bid.goodles}G"
-            .high-bidder= bid_owner_name( auction )
-          %td.bid-button= link_to 'Bid', new_auction_bid_path(auction)
+            .high-bid= "#{auction.high_bid.goodles} G"
+            .high-bidder= link_to bid_owner_name( auction ), main_app.user_path(auction.high_bidder)
+          -if auction.active?
+            %td.bid-button= link_to 'Bid', new_auction_bid_path(auction)
 
 
 - if current_user.admin?
   %br
-  = link_to 'Create a new Auction', new_auction_path
+  .actions
+    = link_to 'Create a new Auction', new_auction_path
