--- a/app/views/knb_auction/auctions/show.html.haml
+++ b/app/views/knb_auction/auctions/show.html.haml
@@ -1,9 +1,15 @@
-%h1 Auction Details
-%h2.product= link_to @auction.product_name, @auction.product
-.auction_status
+= render :partial => "knb_auction/application/auction_engine"
+
+.status-label
   - status_label(@auction.status) {@auction.status.to_s.upcase}
-.start_at="Start at: #{@auction.start_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")}"
-.end_at="End at: #{@auction.end_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")}"
+%h1.title
+  = "Auction Details for"
+  = link_to @auction.product_name, @auction.product
+.time-left
+  = auction_time_left( @auction ) + " left to bid"
+-# .product-image{style: "width: 100px; height:100px;"}
+-# .start_at="Start at: #{@auction.start_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")}"
+-# .end_at="End at: #{@auction.end_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")}"
 %br
 %br
 
@@ -13,7 +19,8 @@
 %br
 %br
 
-= link_to 'Auctions List', auctions_path
-- if current_user.admin?
-  \|
-  = link_to 'Edit this Auction', edit_auction_path(@auction)
+.actions
+  = link_to 'Go back to Auctions', auctions_path
+  - if current_user.admin?
+    \|
+    = link_to 'Edit this Auction', edit_auction_path(@auction)
