--- a/app/assets/stylesheets/knb_auction/auction.css.scss
+++ b/app/assets/stylesheets/knb_auction/auction.css.scss
@@ -1,8 +1,10 @@
 ol.auction-list {
   list-style-type: none;
+   vertical-align:text-top;
   
-  td{
+  tr, td{
     padding:0;
+    vertical-align:text-top;
   }
   
   .admin-menu td{
@@ -22,6 +24,7 @@ ol.auction-list {
   	background: linear-gradient(to bottom, #bce6fc 0%, #e8f0f6 100%); /* W3C */
   	border: 2px solid white;
   	border-radius: 15px;
+  	overflow:hidden;
   }
   
   .auction-item {
@@ -29,7 +32,12 @@ ol.auction-list {
   }
   
   td.product-image {
-    width:10%;
+    width:60px;
+    padding:2px;
+  }
+  
+  .high-bid-info {
+    width: 150px;
   }
 
   .high-bid {
@@ -46,12 +54,12 @@ ol.auction-list {
   }
   
   td.product-name {
-    width:50%;
+    width:55%;
     text-align:left;
   }
   
   td.time-left {
-    width: 15%;
+    width: 135px;
     .time-left-label {
       font: .5em "Comfort-Regular", cursive;
     }
@@ -78,14 +86,9 @@ ol.auction-list {
 }
 
 .product-name {
-  height: 2.5em;
   font-size:2em;
-  line-height:1em;
+  line-height:1.33em;
   text-align:center;
-  overflow:hidden;
-  a{
-    vertical-align:text-top;
-  }
 }
 
 .bid-button{
