--- a/app/assets/stylesheets/knb_auction/bid.css.scss
+++ b/app/assets/stylesheets/knb_auction/bid.css.scss
@@ -1,3 +1,10 @@
+#bidsPage {
+  div, label, input {
+    text-align: center;
+    margin:auto;
+  }
+}
+
 .minimum-bid {
   font: 2em "Comfort-Regular", cursive;
   text-align:center;
