--- a/app/assets/stylesheets/knb_auction/bid.css.scss
+++ b/app/assets/stylesheets/knb_auction/bid.css.scss
@@ -1,14 +1,11 @@
 #bidsPage {
   div, label, input {
-    text-align: center;
     margin:auto;
   }
-}
-
-.minimum-bid {
-  font: 2em "Comfort-Regular", cursive;
-  text-align:center;
-  color:#BE3009;
+  
+  h4 {
+    text-align:center;
+  }
 }
 
 .bid-entry {
