--- a/app/views/knb_auction/products/show.html.haml
+++ b/app/views/knb_auction/products/show.html.haml
@@ -1,3 +1,5 @@
+= render :partial => "knb_auction/application/auction_engine"
+
 %p#notice= notice
 
 %p
@@ -6,22 +8,8 @@
 %p
   %b Description:
   = @product.description
-%p
-  %b Price:
-  = @product.price
-%p
-  %b Sku:
-  = @product.sku
-%p
-  %b Upc:
-  = @product.upc
-%p
-  %b Approved:
-  = @product.approved
-%p
-  %b Supplier:
-  = @product.supplier_id
 
-= link_to 'Edit', edit_product_path(@product)
-\|
-= link_to 'Back', products_path
+-if current_user.admin?
+  =render :partial => "admin_show"
+
+= link_to 'Products List', products_path
