--- a/app/views/knb_auction/auctions/_bid.haml
+++ b/app/views/knb_auction/auctions/_bid.haml
@@ -11,7 +11,7 @@
       - @bids.each do |bid|
         .bid-item
           %tr
-            %td= bid_owner_name( @auction )
+            %td= bid_owner_name( bid )
             %td= bid.bid_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")
             %td= bid.goodles
             - if current_user.admin?
