--- a/app/views/knb_auction/auctions/show.html.haml
+++ b/app/views/knb_auction/auctions/show.html.haml
@@ -1,13 +1,14 @@
 = render :partial => "knb_auction/application/auction_engine"
 
-.status-label
+.status-label.upper.left
   - status_label(@auction.status) {@auction.status.to_s.upcase}
 %h1.title
-  = "Auction for"
-  = link_to @auction.product_name, @auction.product
+  = "Auction for #{@auction.product_name}"
+  -# = link_to @auction.product_name, @auction.product
+.upper.left.product-image{style: "width: 150px; height:150px;"}
+.product-description=@auction.product_description
 .time-left
   = auction_time_left( @auction ) + " left to bid"
--# .product-image{style: "width: 100px; height:100px;"}
 -# .start_at="Start at: #{@auction.start_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")}"
 -# .end_at="End at: #{@auction.end_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")}"
 %br
