--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -15,6 +15,7 @@
       %table.auction-item
         %tr
           %td.product-image{style: "width: 75px; height:75px;"}
+            = image_tag auction.product.assets.first.image.url
           %td.product-name
             .name= link_to auction.product_name, auction
           -if auction.active?
