--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -2,31 +2,8 @@
 
 %h1.title Auctions
 
-%ul.auction-list
-  - @auctions.each do |auction|
-    %li.auction
-      .status-label.upper.left
-        - status_label(auction.status) {auction.status.to_s.upcase}
-      - if current_user.admin?
-        .admin-menu.upper.right
-          %ul
-            %li= link_to 'Edit', edit_auction_path(auction)
-            %li= button_to "Delete", auction, :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
-      %table.auction-item
-        %tr
-          %td.product-image{style: "width: 75px; height:75px;"}
-            = image_tag auction.product.assets.first.image.url
-          %td.product-name
-            .name= link_to auction.product_name, auction
-          -if auction.active?
-            %td.time-left
-              = auction_time_left( auction )
-              .time-left-label="left to bid"
-          %td.high-bid-info
-            .high-bid= "#{auction.high_bid.goodles} G"
-            .high-bidder= bid_owner_name( auction.high_bid )
-          -if auction.active? && current_user.child?
-            %td.bid-button= link_to 'Bid', new_auction_bid_path(auction)
+
+=render :partial => 'auction', :collection => @auctions
 
 
 - if current_user.admin?
