--- a/app/views/knb_auction/auctions/show.html.haml
+++ b/app/views/knb_auction/auctions/show.html.haml
@@ -1,28 +1,14 @@
+= link_to '<< Go back to the Auctions list', auctions_path
+
 = render :partial => "knb_auction/application/auction_engine"
 
-.status-label.upper.left
-  - status_label(@auction.status) {@auction.status.to_s.upcase}
-%h1.title
-  = "Auction for #{@auction.product_name}"
-  -# = link_to @auction.product_name, @auction.product
-.upper.left.product-image{style: "width: 150px; height:150px;"}
-  = image_tag @auction.product.assets.first.image.url
-.product-description=@auction.product_description
-.time-left
-  = auction_time_left( @auction ) + " left to bid"
--# .start_at="Start at: #{@auction.start_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")}"
--# .end_at="End at: #{@auction.end_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")}"
-%br
-%br
+=render :partial => "auction", locals: {auction: @auction}
 
 =render :partial => "bid"
 
 %br
-%br
-%br
-
 .actions
-  = link_to 'Go back to Auctions', auctions_path
+  = link_to 'Go back to the Auctions list', auctions_path
   - if current_user.admin?
     \|
     = link_to 'Edit this Auction', edit_auction_path(@auction)
