--- a/app/views/knb_auction/auctions/_bid.haml
+++ b/app/views/knb_auction/auctions/_bid.haml
@@ -15,8 +15,8 @@
             %td= bid.bid_at.localtime.strftime("%m/%d/%y %I:%M:%S %p %Z")
             %td= bid.goodles
             - if current_user.admin?
-              %td= link_to 'Show', auction_bid_path(@auction, bid)
-              %td= link_to 'Edit', edit_auction_bid_path(@auction, bid)
+              -# %td= link_to 'Show', auction_bid_path(@auction, bid)
+              -# %td= link_to 'Edit', edit_auction_bid_path(@auction, bid)
               %td= button_to "Delete", auction_bid_path(@auction, bid), :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
 
 -if @auction.active?
