Back button on show page

--- a/app/views/knb_auction/auctions/show.html.haml
+++ b/app/views/knb_auction/auctions/show.html.haml
@@ -1,4 +1,7 @@
-= link_to '<< Go back to the Auctions list', auctions_path
+.upper.left= link_to "", auctions_path, :class => "backBtn"
+%br
+%br
+%br
 
 = render :partial => "knb_auction/application/auction_engine"
 
