--- a/app/views/knb_auction/auctions/_bid.haml
+++ b/app/views/knb_auction/auctions/_bid.haml
@@ -1,5 +1,8 @@
+-if @auction.active?
+  .bid-button= link_to 'New Bid', new_auction_bid_path(@auction)
+%br
 -if @bids.count > 0
-  %h1.title Bids
+  %h1.title Bid History
   %table.bid-table
     %tr
       %th Bidder
@@ -18,6 +21,3 @@
               -# %td= link_to 'Show', auction_bid_path(@auction, bid)
               -# %td= link_to 'Edit', edit_auction_bid_path(@auction, bid)
               %td= button_to "Delete", auction_bid_path(@auction, bid), :method=>:delete, :class=>:destroy,:confirm=>"Are you sure?"
-
--if @auction.active?
-  .bid-button= link_to 'New Bid', new_auction_bid_path(@auction)
