product image refactor

--- a/app/assets/stylesheets/knb_auction/auction.css.scss
+++ b/app/assets/stylesheets/knb_auction/auction.css.scss
@@ -116,6 +116,12 @@ ul.auction-list {
   color:#BE3009;
 }
 
+.product-image {
+  img {
+    border:3px solid #a0c7db;
+  }
+}
+
 .product-info {
   vertical-align:text-top;
   text-align:center;
