--- a/app/views/knb_auction/auctions/_auction.haml
+++ b/app/views/knb_auction/auctions/_auction.haml
@@ -10,7 +10,7 @@
     %table.auction-item
       %tr
         %td.product-image{style: "width: 75px; height:75px;"}
-          = image_tag auction.product.assets.first.image.url
+          = image_tag auction.product.main_image(:thumb)
         %td.product-info
           .name= link_to auction.product_name, auction
           .description= auction.product.description
