--- a/app/assets/stylesheets/knb_auction/application.css
+++ b/app/assets/stylesheets/knb_auction/application.css
@@ -27,3 +27,22 @@
 .content {
   position:relative;
 }
+
+.upper {
+  position:absolute;
+  top:5px;
+}
+
+.left {
+  position:absolute;
+  left:5px;
+}
+
+.right {
+  position:absolute;
+  right:5px;
+}
+
+.center {
+  text-align:center;
+}
