--- a/app/views/knb_auction/auctions/show.html.haml
+++ b/app/views/knb_auction/auctions/show.html.haml
@@ -12,6 +12,6 @@
 %br
 .actions
   = link_to 'Go back to the Auctions list', auctions_path
-  - if current_user.admin?
+  - if current_user && current_user.admin?
     \|
     = link_to 'Edit this Auction', edit_auction_path(@auction)
