--- a/app/views/knb_auction/auctions/index.html.haml
+++ b/app/views/knb_auction/auctions/index.html.haml
@@ -13,7 +13,7 @@
 =render :partial => 'auction', :collection => @auctions
 
 
-- if current_user.admin?
+- if current_user && current_user.admin?
   %br
   .actions
     = link_to 'Create a new Auction', new_auction_path
