--- a/app/views/knb_auction/bids/new.html.haml
+++ b/app/views/knb_auction/bids/new.html.haml
@@ -3,5 +3,5 @@
 %h1.title= "New bid for #{@auction.product_name.upcase}"
 
 %h4.minimum-bid= minimum_bid(@auction)
-%h4.user-goodles= "Your maximum bid is #{goodles_to_spend(current_user)} G"
+%h4.user-goodles= "You can spend #{goodles_to_spend(current_user)} G"
 .bid-entry-form= render 'form'
